Microsoft.Azure.Cosmos/src/Query/Core/Parser/sqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from sql.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
internal partial class sqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, K_ALL=28, K_AND=29, K_ARRAY=30, K_AS=31, 
		K_ASC=32, K_BETWEEN=33, K_BY=34, K_DESC=35, K_DISTINCT=36, K_ESCAPE=37, 
		K_EXISTS=38, K_FIRST=39, K_FALSE=40, K_FROM=41, K_GROUP=42, K_IN=43, K_JOIN=44, 
		K_LAST=45, K_LEFT=46, K_LIKE=47, K_LIMIT=48, K_NOT=49, K_NULL=50, K_OFFSET=51, 
		K_OR=52, K_ORDER=53, K_RIGHT=54, K_SELECT=55, K_TOP=56, K_TRUE=57, K_UDF=58, 
		K_UNDEFINED=59, K_VALUE=60, K_WHERE=61, WS=62, NUMERIC_LITERAL=63, STRING_LITERAL=64, 
		LEX_IDENTIFIER=65, PARAMETER=66;
	public const int
		RULE_program = 0, RULE_sql_query = 1, RULE_select_clause = 2, RULE_top_spec = 3, 
		RULE_selection = 4, RULE_select_star_spec = 5, RULE_select_value_spec = 6, 
		RULE_select_list_spec = 7, RULE_select_item = 8, RULE_from_clause = 9, 
		RULE_collection_expression = 10, RULE_collection = 11, RULE_path_expression = 12, 
		RULE_where_clause = 13, RULE_group_by_clause = 14, RULE_order_by_clause = 15, 
		RULE_order_by_items = 16, RULE_order_by_item = 17, RULE_sort_order = 18, 
		RULE_offset_limit_clause = 19, RULE_offset_count = 20, RULE_limit_count = 21, 
		RULE_scalar_expression = 22, RULE_logical_scalar_expression = 23, RULE_in_scalar_expression = 24, 
		RULE_like_scalar_expression = 25, RULE_escape_expression = 26, RULE_binary_scalar_expression = 27, 
		RULE_multiplicative_operator = 28, RULE_additive_operator = 29, RULE_relational_operator = 30, 
		RULE_equality_operator = 31, RULE_bitwise_and_operator = 32, RULE_bitwise_exclusive_or_operator = 33, 
		RULE_bitwise_inclusive_or_operator = 34, RULE_string_concat_operator = 35, 
		RULE_unary_scalar_expression = 36, RULE_unary_operator = 37, RULE_primary_expression = 38, 
		RULE_function_call_scalar_expression = 39, RULE_scalar_expression_list = 40, 
		RULE_object_property_list = 41, RULE_object_property = 42, RULE_identifier = 43, 
		RULE_literal = 44;
	public static readonly string[] ruleNames = {
		"program", "sql_query", "select_clause", "top_spec", "selection", "select_star_spec", 
		"select_value_spec", "select_list_spec", "select_item", "from_clause", 
		"collection_expression", "collection", "path_expression", "where_clause", 
		"group_by_clause", "order_by_clause", "order_by_items", "order_by_item", 
		"sort_order", "offset_limit_clause", "offset_count", "limit_count", "scalar_expression", 
		"logical_scalar_expression", "in_scalar_expression", "like_scalar_expression", 
		"escape_expression", "binary_scalar_expression", "multiplicative_operator", 
		"additive_operator", "relational_operator", "equality_operator", "bitwise_and_operator", 
		"bitwise_exclusive_or_operator", "bitwise_inclusive_or_operator", "string_concat_operator", 
		"unary_scalar_expression", "unary_operator", "primary_expression", "function_call_scalar_expression", 
		"scalar_expression_list", "object_property_list", "object_property", "identifier", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*'", "','", "'('", "')'", "'.'", "'['", "']'", "'?'", "':'", "'??'", 
		"'/'", "'%'", "'+'", "'-'", "'<'", "'>'", "'>='", "'<='", "'='", "'!='", 
		"'&'", "'^'", "'|'", "'||'", "'~'", "'{'", "'}'", null, null, null, null, 
		null, null, null, null, null, null, null, null, "'false'", null, null, 
		null, null, null, null, null, null, null, "'null'", null, null, null, 
		null, null, null, "'true'", "'udf'", "'undefined'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "K_ALL", "K_AND", "K_ARRAY", "K_AS", "K_ASC", 
		"K_BETWEEN", "K_BY", "K_DESC", "K_DISTINCT", "K_ESCAPE", "K_EXISTS", "K_FIRST", 
		"K_FALSE", "K_FROM", "K_GROUP", "K_IN", "K_JOIN", "K_LAST", "K_LEFT", 
		"K_LIKE", "K_LIMIT", "K_NOT", "K_NULL", "K_OFFSET", "K_OR", "K_ORDER", 
		"K_RIGHT", "K_SELECT", "K_TOP", "K_TRUE", "K_UDF", "K_UNDEFINED", "K_VALUE", 
		"K_WHERE", "WS", "NUMERIC_LITERAL", "STRING_LITERAL", "LEX_IDENTIFIER", 
		"PARAMETER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "sql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static sqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public sqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public sqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Sql_queryContext sql_query() {
			return GetRuleContext<Sql_queryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(sqlParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			sql_query();
			State = 91;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sql_queryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Select_clauseContext select_clause() {
			return GetRuleContext<Select_clauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public From_clauseContext from_clause() {
			return GetRuleContext<From_clauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Where_clauseContext where_clause() {
			return GetRuleContext<Where_clauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Group_by_clauseContext group_by_clause() {
			return GetRuleContext<Group_by_clauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Order_by_clauseContext order_by_clause() {
			return GetRuleContext<Order_by_clauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Offset_limit_clauseContext offset_limit_clause() {
			return GetRuleContext<Offset_limit_clauseContext>(0);
		}
		public Sql_queryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sql_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterSql_query(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitSql_query(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSql_query(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Sql_queryContext sql_query() {
		Sql_queryContext _localctx = new Sql_queryContext(Context, State);
		EnterRule(_localctx, 2, RULE_sql_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			select_clause();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_FROM) {
				{
				State = 94;
				from_clause();
				}
			}

			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_WHERE) {
				{
				State = 97;
				where_clause();
				}
			}

			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_GROUP) {
				{
				State = 100;
				group_by_clause();
				}
			}

			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_ORDER) {
				{
				State = 103;
				order_by_clause();
				}
			}

			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_OFFSET) {
				{
				State = 106;
				offset_limit_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Select_clauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_SELECT() { return GetToken(sqlParser.K_SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext selection() {
			return GetRuleContext<SelectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_DISTINCT() { return GetToken(sqlParser.K_DISTINCT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Top_specContext top_spec() {
			return GetRuleContext<Top_specContext>(0);
		}
		public Select_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select_clause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterSelect_clause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitSelect_clause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect_clause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Select_clauseContext select_clause() {
		Select_clauseContext _localctx = new Select_clauseContext(Context, State);
		EnterRule(_localctx, 4, RULE_select_clause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(K_SELECT);
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_DISTINCT) {
				{
				State = 110;
				Match(K_DISTINCT);
				}
			}

			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_TOP) {
				{
				State = 113;
				top_spec();
				}
			}

			State = 116;
			selection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Top_specContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_TOP() { return GetToken(sqlParser.K_TOP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMERIC_LITERAL() { return GetToken(sqlParser.NUMERIC_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAMETER() { return GetToken(sqlParser.PARAMETER, 0); }
		public Top_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_top_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterTop_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitTop_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTop_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Top_specContext top_spec() {
		Top_specContext _localctx = new Top_specContext(Context, State);
		EnterRule(_localctx, 6, RULE_top_spec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(K_TOP);
			State = 119;
			_la = TokenStream.LA(1);
			if ( !(_la==NUMERIC_LITERAL || _la==PARAMETER) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Select_star_specContext select_star_spec() {
			return GetRuleContext<Select_star_specContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Select_value_specContext select_value_spec() {
			return GetRuleContext<Select_value_specContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Select_list_specContext select_list_spec() {
			return GetRuleContext<Select_list_specContext>(0);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterSelection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitSelection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectionContext selection() {
		SelectionContext _localctx = new SelectionContext(Context, State);
		EnterRule(_localctx, 8, RULE_selection);
		try {
			State = 124;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121;
				select_star_spec();
				}
				break;
			case K_VALUE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122;
				select_value_spec();
				}
				break;
			case T__2:
			case T__5:
			case T__12:
			case T__13:
			case T__24:
			case T__25:
			case K_ALL:
			case K_ARRAY:
			case K_EXISTS:
			case K_FIRST:
			case K_FALSE:
			case K_LAST:
			case K_LEFT:
			case K_NOT:
			case K_NULL:
			case K_RIGHT:
			case K_TRUE:
			case K_UDF:
			case K_UNDEFINED:
			case NUMERIC_LITERAL:
			case STRING_LITERAL:
			case LEX_IDENTIFIER:
			case PARAMETER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 123;
				select_list_spec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Select_star_specContext : ParserRuleContext {
		public Select_star_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select_star_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterSelect_star_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitSelect_star_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect_star_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Select_star_specContext select_star_spec() {
		Select_star_specContext _localctx = new Select_star_specContext(Context, State);
		EnterRule(_localctx, 10, RULE_select_star_spec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Select_value_specContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode K_VALUE() { return GetToken(sqlParser.K_VALUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Scalar_expressionContext scalar_expression() {
			return GetRuleContext<Scalar_expressionContext>(0);
		}
		public Select_value_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select_value_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.EnterSelect_value_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IsqlListener typedListener = listener as IsqlListener;
			if (typedListener != null) typedListener.ExitSelect_value_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsqlVisitor<TResult> typedVisitor = visitor as IsqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect_value_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Select_value_specContext select_value_spec() {
		Select_value_specContext _localctx = new Select_value_specContext(Context, State);
		EnterRule(_localctx, 12, RULE_select_value_spec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			Match(K_VALUE);
			State = 129;
			scalar_expression(0);
			}
		}
		catch (RecognitionException re) {
